# Intervalian

./: CMakeLists.txt
src/: main.cpp
src/ast/: AstNode.cpp  AstNode.h
src/ast/atoms/: IntervalNode.cpp  IntervalNode.h
src/ast/binaryops/: BinaryOpNode.cpp  BinaryOpNode.h
src/ast/interval/: IntervalNode.cpp  IntervalNode.h
src/ast/unaryops/: PowNode.cpp  PowNode.h  UnaryOpNode.cpp  UnaryOpNode.h
src/interval/: Interval.cpp  Interval.h
src/visitor/: AstVisitor.h  EvaluationVisitor.cpp  EvaluationVisitor.h
